errors.txt
### SYNTAX ERROR

File "/home/elevynn/lpthw/ex7.py", line 30
    print(end1 + end2 + end3 + end4 + end5 + end6 end=' ')
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?


### ANOTHER SYNTAX ERROR
  File "/home/elevynn/lpthw/ex9.py", line 10
    print("""
         ^
SyntaxError: '(' was never closed

### VALUE ERROR
ValueError: not enough values to unpack (expected 2, got 1)
